committing with changes