@@ -30,14 +30,30 @@ android {
 
 dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-
-    // Required -- JUnit 4 framework
-    testImplementation 'junit:junit:4.12'
-    // Optional -- Mockito framework
-    testImplementation 'org.mockito:mockito-core:1.10.19'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
-    testImplementation 'junit:junit:4.+'
+
+    // Required -- JUnit 4 framework
+    testImplementation 'junit:junit:4.13.2' // Updated to the latest stable version
+
+    // Optional -- Mockito framework
+    testImplementation 'org.mockito:mockito-core:3.11.2' // Updated to a more recent version
+    testImplementation 'org.mockito:mockito-inline:3.11.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+}
+
+tasks.withType(JavaCompile) {
+    options.forkOptions.jvmArgs << '--add-opens' << 'java.base/java.io=ALL-UNNAMED'
+    options.forkOptions.jvmArgs << '--add-opens' << 'java.base/java.lang=ALL-UNNAMED'
+    options.forkOptions.jvmArgs << '--add-opens' << 'java.base/java.util=ALL-UNNAMED'
+}
+
+tasks.withType(Test) {
+    jvmArgs '--add-opens', 'java.base/java.io=ALL-UNNAMED'
+    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
+    jvmArgs '--add-opens', 'java.base/java.util=ALL-UNNAMED'
 }
